replace filename to path in request\response