@@ -1,16 +1,17 @@
 package ru.rompet.cloudstorage.client.handler;
 
-import ru.rompet.cloudstorage.common.Command;
+import ru.rompet.cloudstorage.common.enums.Command;
+import ru.rompet.cloudstorage.common.enums.Parameter;
 
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 
 public class ConsoleInputHandler {
     private String[] args;
     private Command command;
-    private Path path;
+    private Path fromPath;
+    private Path toPath;
     private ArrayList<String> parameters;
 
     public ConsoleInputHandler() {
@@ -19,23 +20,24 @@ public class ConsoleInputHandler {
 
     public boolean validate(String input) {
         this.args = input.split("\\s");
-        return isValidCommand() && isValidPath() && isValidParameters();
+        tryGetParameters();
+        return isValidCommand() && isValidPath();
     }
 
     public Command getCommand() {
         return command;
     }
 
-//    public String getFilename() {
-//        return path.getFileName().toString();
-//    }
-
     public ArrayList<String> getParameters() {
         return parameters;
     }
 
-    public String getPath() {
-        return path.toString();
+    public String getFromPath() {
+        return fromPath.toString();
+    }
+
+    public String getToPath() {
+        return toPath.toString();
     }
 
     public boolean isValidCommand() {
@@ -49,22 +51,30 @@ public class ConsoleInputHandler {
 
     public boolean isValidPath() {
         try {
-            path = Paths.get(args[args.length - 1]);
+            fromPath = Path.of(args[1 + parameters.size()]);
+            if (args.length - 1 == 2 + parameters.size()) {
+                toPath = Path.of(args[2 + parameters.size()]);
+            } else {
+                toPath = fromPath;
+            }
         } catch (InvalidPathException | NullPointerException e) {
             return false;
         }
         return true;
     }
 
-    public boolean isValidParameters() {
+    public boolean hasParameters() {
+        return parameters.size() != 0;
+    }
+
+    private void tryGetParameters() {
         parameters.clear();
-        for (int i = 1; i <= args.length - 2; i++) {
-            if (args[i].matches("\\s-[a-zA-Z]*\\s")) {
+        for (int i = 1; i < args.length; i++) {
+            if (Parameter.has(args[i].substring(1))) {
                 parameters.add(args[i]);
             } else {
-                return false;
+                break;
             }
         }
-        return true;
     }
 }
